--- a/WS/Web.config
+++ b/WS/Web.config
@@ -1,10 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<location path="WebService.asmx">
-    <system.web>
-      <authorization>
-        <allow users="*"/>
-      </authorization>
-    </system.web>
-  </location>
+	<location path="WebService.asmx">
+		<system.web>
+			<authorization>
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
+	<location path="WebService_CHECKPOS.asmx">
+		<system.web>
+			<authorization>
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
 </configuration>
